Fix alignments

--- a/resources/assets/less/bem/profile-info.less
+++ b/resources/assets/less/bem/profile-info.less
@@ -27,6 +27,7 @@
   width: 100%;
 
   @media @desktop {
+    align-self: flex-start;
     padding-left: @gutter-profile-page-desktop;
     flex: 1;
     width: auto;
@@ -140,7 +141,7 @@
 
     &--flag {
       @media @desktop {
-        margin-top: 30px;
+        margin-top: 10px;
       }
     }
   }
@@ -172,6 +173,7 @@
   &__title {
     font-size: @font-size--title-small-4;
     padding: 5px 0 15px;
+    line-height: normal;
 
     @media @desktop {
       padding: 5px 0;
